src/objects/ER_EDG_Error_Matrix__mdt.object
<CustomObject>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Moldavia</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Slovakia</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Functional_Error__c</fullName>
        <label>Functional Error</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ER_Error1</fullName>
                    <default>true</default>
                    <label>ER_Error1</label>
                </value>
                <value>
                    <fullName>ER_Error2</fullName>
                </value>
                <value>
                    <fullName>ER_Error3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Operational_System__c</fullName>
        <label>Operational System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>BON</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>NEMO</fullName>
                </value>
                <value>
                    <fullName>TRI1</fullName>
                </value>
                <value>
                    <fullName>TRI2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EDG Error Matrix</label>
    <pluralLabel>EDG Error Matrices</pluralLabel>
</CustomObject>